# fastapi-todos

./: pyproject.toml
books/: main.py
tests/todos/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_user.py  utils.py
todos/: database.py  jwt_tokens.py  main.py  models.py  requests.py
todos/routes/: admin.py  auth.py  todos.py  user.py
todos/templates/: home.html
